--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-slate
 title: [Ruy Freitas Reis]
 description: [👨🏻‍🎓PhD in Computational Modeling 👨🏻‍💻 Computational Engineer and Computer Scientist 👨🏻‍🏫 Adjunct Professor and Researcher at UFJF]
+
+show_downloads: ["false"]
