--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-slate
 title: [Prof. Ruy Freitas Reis]
-google_analytics: [274503727]
+google_analytics: [G-SCQJPH58VG]
 github:
   is_project_page: false
